[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passsage"
dynamic = ["version"]
description = "S3-backed caching proxy for mitmproxy (Pas³age = Passage + S3)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "System1 OpCo LLC" },
    { name = "Attila Nagy"},
]
keywords = ["proxy", "cache", "s3", "mitmproxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "boto3>=1.26",
    "cachetools>=5.0",
    "click>=8.0",
    "flask>=2.0",
    "mitmproxy~=12.2",
    "pytz>=2023.0",
    "requests>=2.28",
    "werkzeug>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "psutil",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
passsage = "passsage.cli:main"

[project.urls]
Homepage = "https://github.com/bra-fsn/passsage"
Repository = "https://github.com/bra-fsn/passsage"

[tool.hatch.version]
path = "src/passsage/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/passsage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a live proxy and S3 backend (deselect with -m 'not integration')",
    "slow: long-running tests (e.g. huge file download); deselect with -m 'not slow'",
]
